[tool.poetry]
name = "pubmed-research-fetcher"
version = "0.1.0"
description = "A Python tool to fetch PubMed research papers and filter based on author affiliation."
authors = ["ch sai"]
readme = "README.md"
packages = [{include = "papers_fetcher", from = "src"}]  # Ensure this exists

[tool.poetry.dependencies]
python = ">=3.13"
requests = "^2.32.3"
pandas = "^2.2.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
